--- a/src/Interaces/JFrameAdministrador.form
+++ b/src/Interaces/JFrameAdministrador.form
@@ -136,6 +136,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="GERENTES"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonGerentesActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
